--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
         <Title>Hello Coursera!</Title>
     </Head>
 <body>
-    <h1>Hello Coursera!its a great course!!</h1>
+    <h1>Hello Coursera!</h1>
 </body>
 </HTML>
